# firebreath-x

./: .gitignore  .gitmodules  CMakeLists.txt  README  cmake.conf.stub
doc/: BuildingWithCmake.txt  CSharpReloading.txt  WorldDominationPlan.txt
projects/: CMakeLists.txt  README.txt
projects/PyHelloWorld/: CMakeLists.txt  Factory.cpp  PluginConfig.cmake  PyHelloWorld.cpp  PyHelloWorld.h  PyHelloWorldAPI.cpp  PyHelloWorldAPI.h  test.html
projects/PyHelloWorld/Mac/: projectDef.cmake
projects/PyHelloWorld/Win/: projectDef.cmake
projects/PyHelloWorld/Win/WiX/: PyHelloWorldInstaller.wxs
projects/PyHelloWorld/X11/: projectDef.cmake
src/: FireBreath.i
src/csharp/: Convert.cs  Main.cs  Object.cs
src/csharp/makefiles/: FireBreath.sln
src/csharp/makefiles/FireBreath/: FireBreath.csproj
src/csharp/makefiles/FireBreath/Properties/: AssemblyInfo.cs
src/csharp/makefiles/SimpleTest/: SimpleTest.csproj
src/csharp/makefiles/SimpleTest/Properties/: AssemblyInfo.cs
src/csharp/src/: Convert.cs  JSObject.cs  Method.cs  Object.cs  Startup.cs  Type.cs
src/csharp/test/simple/: CMakeLists.txt  FBXSimpleTestPluginCSharp.cpp  FBXSimpleTestPluginCSharp.h  FBXSimpleTestPluginCSharpAPI.cpp  FBXSimpleTestPluginCSharpAPI.h  Factory.cpp  Main.cs  PluginConfig.cmake
src/csharp/test/simple/Mac/: projectDef.cmake
src/csharp/test/simple/Win/: projectDef.cmake
src/csharp/test/simple/Win/WiX/: FBXSimpleTestPluginCSharpInstaller.wxs
src/csharp/test/simple/X11/: projectDef.cmake
src/csharp/test/simple/csharp/: Launcher.cs  Main.cs
src/csharp/test/simple/html/: FBControl.htm
src/fbx/: FBXAPI.h  FBXJSAPI.cpp  FBXJSAPI.h  FBXJSAPIWrapper.cpp  FBXJSAPIWrapper.h  FBXResult.cpp  FBXResult.h  FBXVariant.cpp  FBXVariant.h  FireBreath.i  JSAPIWrapper.cpp  JSAPIWrapper.h
src/python/: CMakeLists.txt  setup.py
src/python/fbx/: conversion.py  jsapi.py
src/python/fbx/example/: hello_world.py
src/python/patches/: CMakeLists.FireBreath.patch  FireBreath.def.patch  FireBreath.py.patch
